--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,7 +462,7 @@ body {
 
 .overlay:after {
     position: absolute;
-    background: rgba(7, 7, 7, 0.6);
+    background: #48b14d;
     width: 100%;
     height: 100%;
     left: 0;
